--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["setuptools>=65.5.0"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project]
 name = "yetanothergpt"
@@ -20,7 +20,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pre-commit>=3.7.1",
-    "ruff>=0.9.1",
+    "ruff>=0.12.3",
 ]
 
 [project.urls]
@@ -32,11 +32,6 @@ output-format = "grouped"
 target-version = "py311"
 
 [tool.ruff.lint]
-ignore = [
-    "E111", # Indentation is not a multiple of {indent_width}
-    "E114", # Indentation is not a multiple of {indent_width} (comment)
-    "E117", # Over-indented (comment)
-]
 select = [
     "ARG", # Flake8 unused arguments
     "D", # Pydocstyle errors
@@ -48,9 +43,6 @@ select = [
     "UP", # Pyupgrade upgrades
 ]
 
-[tool.ruff.lint.extend-per-file-ignores]
-"examples/*" = ["D"]
-
 [tool.ruff.lint.isort]
 force-single-line = false
 lines-after-imports = 2
@@ -61,5 +53,12 @@ convention = "google"
 [tool.ruff.format]
 docstring-code-format = true
 
-[tool.uv.pip]
-extra-index-url = ["https://download.pytorch.org/whl/cu124"]
+[tool.uv.sources]
+torch = [
+    {index = "pytorch-cu126"},
+]
+
+[[tool.uv.index]]
+name = "pytorch-cu126"
+url = "https://download.pytorch.org/whl/cu126"
+explicit = true
